--- a/KBL.ExceptionManager/KBL.ExceptionManager.Base/KBL.ExceptionManager.Base.csproj
+++ b/KBL.ExceptionManager/KBL.ExceptionManager.Base/KBL.ExceptionManager.Base.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\KBL.ExceptionManager.Interfaces\KBL.ExceptionManager.Interfaces.csproj" />
+  </ItemGroup>
+
 </Project>
