JSON logic complete. Not tested.

--- a/KBL.ExceptionManager/KBL.ExceptionManager.Model/KBL.ExceptionManager.Model.csproj
+++ b/KBL.ExceptionManager/KBL.ExceptionManager.Model/KBL.ExceptionManager.Model.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Exceptions\" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.1-beta3" />
   </ItemGroup>
 
   <ItemGroup>
