--- a/KBL.ExceptionManager/KBL.ExceptionManager.Base/KBL.ExceptionManager.Base.csproj
+++ b/KBL.ExceptionManager/KBL.ExceptionManager.Base/KBL.ExceptionManager.Base.csproj
@@ -6,10 +6,13 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.1-beta3" />
+    <PackageReference Include="NLog.Extensions.Logging" Version="1.0.0-rtm-rc5" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\KBL.ExceptionManager.Interfaces\KBL.ExceptionManager.Interfaces.csproj" />
+    <ProjectReference Include="..\KBL.ExceptionManager.Model\KBL.ExceptionManager.Model.csproj" />
   </ItemGroup>
 
 </Project>
