Added script for budilng nuget package.

--- a/KBL.ExceptionManager/KBL.ExceptionManager.Base/KBL.ExceptionManager.Base.csproj
+++ b/KBL.ExceptionManager/KBL.ExceptionManager.Base/KBL.ExceptionManager.Base.csproj
@@ -2,6 +2,19 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <PackageId>KBL.ExceptionManager</PackageId>
+    <Version>0.9.3-beta-1</Version>
+    <Authors>Jakub Luňáček</Authors>
+    <Company>KBL.codes</Company>
+    <Product>KBL.ExceptionManager</Product>
+    <Copyright>Copyright 2018 (c) KBL.codes. All rights reserved.</Copyright>
+    <PackageProjectUrl>https://github.com/KBL-Framework/KBL.ExceptionManager</PackageProjectUrl>
+    <PackageIconUrl />
+    <RepositoryUrl>https://github.com/KBL-Framework/KBL.ExceptionManager</RepositoryUrl>
+    <RepositoryType>GIT</RepositoryType>
+    <PackageTags>KBL ExceptionManager Manager Exception lunacek kbl.codes</PackageTags>
+    <PackageReleaseNotes>Init</PackageReleaseNotes>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
