--- a/nuget/Package.nuspec
+++ b/nuget/Package.nuspec
@@ -8,12 +8,14 @@
     <owners>KBL.codes</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Easy way to handle with exceptions in ASP.NET Core.</description>
-    <releaseNotes>First release.</releaseNotes>
+    <releaseNotes>Cumulative update - some repairs and updates.</releaseNotes>
     <copyright>Copyright 2018 (c) KBL.codes. All rights reserved.</copyright>
     <tags>KBL ExceptionManager Manager Exception lunacek kbl.codes</tags>
-    <projectUrl>https://github.com/kubalunacek/KBL.ExceptionManager</projectUrl>
+    <projectUrl>https://github.com/KBL-Framework/KBL.ExceptionManager</projectUrl>
     <dependencies>
-      
+      <dependency id="Newtonsoft.Json" version="11.0.1-beta3" />
+      <dependency id="NLog.Extensions.Logging" version="1.0.0-rtm-rc6" /> 
+      <dependency id="Microsoft.AspNetCore.Http.Abstractions" version="2.0.1" /> 
     </dependencies>
   </metadata>
   
