--- a/KBL.ExceptionManager/KBL.ExceptionManager.Interfaces/KBL.ExceptionManager.Interfaces.csproj
+++ b/KBL.ExceptionManager/KBL.ExceptionManager.Interfaces/KBL.ExceptionManager.Interfaces.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
   </ItemGroup>
 
 </Project>
