--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: csharp
-dist: trusty
+dist: xenial
 sudo: required
 mono: none
-dotnet: 5.0.2
+dotnet: 3.1
 before_install:
   - chmod +x ./build.sh
 script:
