--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,15 @@
 language: csharp
-dist: trusty
+dist: bionic
 sudo: required
 mono: none
-dotnet: 2.0.0
 before_install:
+  - wget -q https://packages.microsoft.com/config/ubuntu/18.04/packages-microsoft-prod.deb -O packages-microsoft-prod.deb
+  - sudo dpkg -i packages-microsoft-prod.deb
+  - sudo add-apt-repository universe
+  - sudo apt-get update
+  - sudo apt-get install apt-transport-https
+  - sudo apt-get update
+  - sudo apt-get install dotnet-sdk-5.0
   - chmod +x ./build.sh
 script:
   - ./build.sh --quiet verify
