--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,11 +23,11 @@ jobs:
         with:
           dotnet-version: 5.0.x
       - name: Restore
-        run: dotnet restore
+        run: dotnet restore $PROJECT_NAME
       - name: Build
-        run: dotnet build -c Release --no-restore
+        run: dotnet build $PROJECT_NAME -c Release --no-restore
       - name: Test
-        run: dotnet test -c Release
+        run: dotnet test $PROJECT_NAME -c Release
       - name: Pack
         run: dotnet pack -v normal -c Release --no-restore -p:PackageVersion=$GITHUB_RUN_ID $PROJECT_NAME/$PROJECT_NAME.csproj
       - name: Upload Artifact
