--- a/KBL.ExceptionManager/KBL.ExceptionManager.Base/KBL.ExceptionManager.Base.csproj
+++ b/KBL.ExceptionManager/KBL.ExceptionManager.Base/KBL.ExceptionManager.Base.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.1;net5.0</TargetFrameworks>
     <PackageId>KBL.ExceptionManager</PackageId>
-    <Version>0.9.3.1-beta-1.dev0002</Version>
+    <Version>0.10.1</Version>
     <Authors>Jakub Luňáček</Authors>
     <Company>KBL.codes</Company>
     <Product>KBL.ExceptionManager</Product>
@@ -16,8 +16,14 @@
     <PackageTags>KBL ExceptionManager Manager Exception lunacek kbl.codes</PackageTags>
     <PackageReleaseNotes>Init</PackageReleaseNotes>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <TargetsForTfmSpecificBuildOutput>$(TargetsForTfmSpecificBuildOutput);CopyProjectReferencesToPackage</TargetsForTfmSpecificBuildOutput>
   </PropertyGroup>
-  
+
+  <Target DependsOnTargets="BuildOnlySettings;ResolveReferences" Name="CopyProjectReferencesToPackage">
+    <ItemGroup>
+      <BuildOutputInPackage Include="@(ReferenceCopyLocalPaths-&gt;WithMetadataValue('ReferenceSourceTarget', 'ProjectReference'))" />
+    </ItemGroup>
+  </Target>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
@@ -26,8 +32,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\KBL.ExceptionManager.Interfaces\KBL.ExceptionManager.Interfaces.csproj" />
-    <ProjectReference Include="..\KBL.ExceptionManager.Model\KBL.ExceptionManager.Model.csproj" />
+    <ProjectReference Include="..\KBL.ExceptionManager.Interfaces\KBL.ExceptionManager.Interfaces.csproj">
+      <ReferenceOutputAssembly>true</ReferenceOutputAssembly>
+      <IncludeAssets>KBL.ExceptionManager.Interfaces.dll</IncludeAssets>
+    </ProjectReference>
+    <ProjectReference Include="..\KBL.ExceptionManager.Model\KBL.ExceptionManager.Model.csproj">
+      <ReferenceOutputAssembly>true</ReferenceOutputAssembly>
+      <IncludeAssets>KBL.ExceptionManager.Model.dll</IncludeAssets>
+    </ProjectReference>
+
   </ItemGroup>
 
 </Project>
