--- a/KBL.ExceptionManager/KBL.ExceptionManager.Base/KBL.ExceptionManager.Base.csproj
+++ b/KBL.ExceptionManager/KBL.ExceptionManager.Base/KBL.ExceptionManager.Base.csproj
@@ -2,7 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.1;net5.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netstandard2.1;net5.0</TargetFrameworks>
     <PackageId>KBL.ExceptionManager</PackageId>
     <Version>0.10.1</Version>
     <Authors>Jakub Luňáček</Authors>
